syntax = "proto3";

package fintekkers.models.price;

import "fintekkers/models/util/decimal_value.proto";
import "fintekkers/models/util/local_timestamp.proto";
import "fintekkers/models/util/uuid.proto";

import "fintekkers/models/security/security.proto";

option java_multiple_files = true;

option java_outer_classname = "PriceProtos";

message PriceProto {
  string object_class = 1;
  string version = 2;

  //Primary Key
  fintekkers.models.util.UUIDProto uuid = 5;
  fintekkers.models.util.LocalTimestampProto as_of = 6;
  bool is_link = 7;

  util.LocalTimestampProto valid_from = 8;
  util.LocalTimestampProto valid_to = 9;

  fintekkers.models.util.DecimalValueProto price = 10;
  fintekkers.models.security.SecurityProto security = 11;

}
